force-app/main/default/objects/Buyer__c/Buyer__c.object-meta.xml
<CustomObject>
    <description>Customer or prospect requesting property bookings.</description>
    <label>Buyer</label>
    <nameField><label>Buyer Name</label><type>Text</type></nameField>
    <pluralLabel>Buyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>