force-app/main/default/objects/Buyer__c/fields/Company_Name__c.field-meta.xml
<CustomField><fullName>Company_Name__c</fullName><description>Company name for commercial or brokerage buyers.</description><inlineHelpText>Optional company name.</inlineHelpText><label>Company Name</label><length>255</length><required>false</required><type>Text</type><unique>false</unique></CustomField>