force-app/main/default/objects/Buyer__c/fields/Email__c.field-meta.xml
<CustomField><fullName>Email__c</fullName><description>Buyer email captured before booking.</description><inlineHelpText>Required for booking confirmation and follow-up.</inlineHelpText><label>Email</label><required>true</required><trackHistory>true</trackHistory><type>Email</type><unique>false</unique></CustomField>