force-app/main/default/objects/Buyer__c/fields/Location__c.field-meta.xml
<CustomField><fullName>Location__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>Preferred or current buyer location.</description><inlineHelpText>Connect buyer to a location when known.</inlineHelpText><label>Location</label><referenceTo>Location__c</referenceTo><relationshipLabel>Buyers</relationshipLabel><relationshipName>Buyers</relationshipName><required>false</required><type>Lookup</type></CustomField>