force-app/main/default/objects/Buyer__c/fields/Phone__c.field-meta.xml
<CustomField><fullName>Phone__c</fullName><description>Buyer phone captured before booking.</description><inlineHelpText>Required before creating a property booking.</inlineHelpText><label>Phone</label><required>true</required><trackHistory>true</trackHistory><type>Phone</type></CustomField>